Fix the text overflow for safari
[#166087284]

--- a/src/views/collection/DiscoverCollectionsView.less
+++ b/src/views/collection/DiscoverCollectionsView.less
@@ -53,10 +53,20 @@
     }
 
     &subject-link {
+      display: block;
+
       width: 100%;
       margin-bottom: 12px;
+
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
+
+      text-decoration: none;
+
+      span {
+        display: inline;
+      }
     }
 
     &subject-list-item {
